Fix style - hover-state  on collapse button and update button

--- a/src/assets/styles/basics/_forms.scss
+++ b/src/assets/styles/basics/_forms.scss
@@ -2,10 +2,6 @@ button {
 	border: 0;
 	background-color: transparent;
 
-	&:hover {
-	background-color: rgba(103, 104, 121, 0.1);
-}
-
 }
 
 form > * {
