--- a/src/assets/styles/cmps/GroupHeader.scss
+++ b/src/assets/styles/cmps/GroupHeader.scss
@@ -35,11 +35,6 @@
         &.collapsed svg {
           transform: rotate(-90deg);
         }
-        
-        &:hover {
-          background-color: rgba(0, 0, 0, 0.05);
-          border-radius: 4px;
-        }
     }
 
     .group-actions {
